Stop text from overflowing out of display
* text overflow from display div no longer continues outside of the
display area

--- a/styles.css
+++ b/styles.css
@@ -40,6 +40,9 @@ button {
     align-items: flex-end;
     width: 300px;
     height: 125px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .operators {
